force-app/main/default/objects/Loan_Document_Case__c/Loan_Document_Case__c.object-meta.xml
<CustomObject>
    <description>Per-loan operational summary for document workflow state and alerts.</description>
    <label>Loan Document Case</label>
    <nameField>
        <displayFormat>LDC-{00000}</displayFormat>
        <label>Loan Document Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Document Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>