force-app/main/default/objects/Loan_Document_Case__c/fields/Awaiting_Review_Count__c.field-meta.xml
<CustomField><fullName>Awaiting_Review_Count__c</fullName><label>Awaiting Review Count</label><precision>6</precision><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>