force-app/main/default/objects/Loan_Document_Case__c/fields/First_Missing_On__c.field-meta.xml
<CustomField><fullName>First_Missing_On__c</fullName><label>First Missing On</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>