force-app/main/default/objects/Loan_Document_Case__c/fields/Last_Action_On__c.field-meta.xml
<CustomField><fullName>Last_Action_On__c</fullName><label>Last Action On</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>