force-app/main/default/objects/Loan_Document_Case__c/fields/Last_Alert_Level__c.field-meta.xml
<CustomField><fullName>Last_Alert_Level__c</fullName><label>Last Alert Level</label><precision>6</precision><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>