force-app/main/default/objects/Loan_Document_Case__c/fields/Last_Alert_On__c.field-meta.xml
<CustomField><fullName>Last_Alert_On__c</fullName><label>Last Alert On</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>