force-app/main/default/objects/Loan_Document_Case__c/fields/Loan_Key__c.field-meta.xml
<CustomField>
    <fullName>Loan_Key__c</fullName>
    <externalId>true</externalId>
    <label>Loan Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>