force-app/main/default/objects/Loan_Document_Case__c/fields/Missing_Count__c.field-meta.xml
<CustomField><fullName>Missing_Count__c</fullName><label>Missing Count</label><precision>6</precision><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>