force-app/main/default/objects/Loan_Document_Case__c/fields/Next_Alert_On__c.field-meta.xml
<CustomField><fullName>Next_Alert_On__c</fullName><label>Next Alert On</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>