force-app/main/default/objects/Loan_Document_Case__c/fields/Required_Count__c.field-meta.xml
<CustomField><fullName>Required_Count__c</fullName><label>Required Count</label><precision>6</precision><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>